# EXPTask

./: .gitignore  CMakeLists.txt  EXP.sln  EXP.vcxproj  EXP.vcxproj.filters  FindEXPTask.cmake
EXP/: EXP.cpp  EXP.hpp  EXPPriv.hpp
EXP.xcodeproj/: project.pbxproj
EXP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EXP/Entity/: Entity.cpp  Entity.hpp
EXP/State/: State.cpp  State.hpp  StatePrimitive.cpp  StatePrimitive.hpp  TargetSet.cpp  TargetSet.hpp  Task.cpp  Task.hpp  abort_conditions.hpp  exit_conditions.cpp  exit_conditions.hpp
EXP/Time/: Keeper.cpp  Keeper.hpp  Timer.cpp  Timer.hpp  Timings.hpp  frame_timer.cpp  frame_timer.hpp
EXP/Tracking/: BoundsRectangle.cpp  BoundsRectangle.hpp  BoundsXY.hpp  TargetXY.cpp  TargetXY.hpp
EXP/Util/: EXP_ASSERT.h
EXP/Util/assertions/: static_assert__array_contains.cpp  test_maps.hpp
include/: EXP.hpp  EXPTask.hpp
include/EXPTask/State/: State.hpp  StatePrimitive.hpp  TargetSet.hpp  Task.hpp  exit_conditions.hpp
include/EXPTask/Time/: Keeper.hpp  Timer.hpp  Timings.hpp  frame_timer.hpp
include/EXPTask/Tracking/: BoundsRectangle.hpp  TargetXY.hpp
lib/: EXPUtil.lib
src/EXPTask/State/: State.cpp  StatePrimitive.cpp  TargetSet.cpp  Task.cpp  exit_conditions.cpp
src/EXPTask/Time/: Keeper.cpp  Timer.cpp  frame_timer.cpp
test/: main.cpp
test/basic/: test_states.hpp  test_threaded_states2.hpp  test_threaded_states3.hpp  test_time.hpp
test/include/: basic.hpp  test_bounds.hpp  test_states.hpp  test_threaded_states.hpp  test_threaded_states3.hpp  threading1.hpp  threading2.hpp
(+6 files in other folders)
